Backend/Generated/antlr4/KeywordGrammarParser.cpp

// Generated from ./antlr4/KeywordGrammar.g4 by ANTLR 4.13.1


#include "KeywordGrammarVisitor.h"

#include "KeywordGrammarParser.h"


using namespace antlrcpp;
using namespace Keyword;

using namespace antlr4;

namespace {

struct KeywordGrammarParserStaticData final {
  KeywordGrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  KeywordGrammarParserStaticData(const KeywordGrammarParserStaticData&) = delete;
  KeywordGrammarParserStaticData(KeywordGrammarParserStaticData&&) = delete;
  KeywordGrammarParserStaticData& operator=(const KeywordGrammarParserStaticData&) = delete;
  KeywordGrammarParserStaticData& operator=(KeywordGrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag keywordgrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
KeywordGrammarParserStaticData *keywordgrammarParserStaticData = nullptr;

void keywordgrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (keywordgrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(keywordgrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<KeywordGrammarParserStaticData>(
    std::vector<std::string>{
      "start_", "chunk", "block", "stat", "string", "identifier", "objectIdentifier", 
      "methodIdentifier", "valIdentifier", "typeIdentifier", "paramenter", 
      "paramenterlist", "paramenterDef", "paramenterDeflist", "objectdef", 
      "objmethoddef", "methoddef", "valdef", "valassignment", "methodcall", 
      "objmethodcall"
    },
    std::vector<std::string>{
      "", "';'", "'\"'", "','", "'object'", "'method'", "'('", "')'", "'{'", 
      "'}'", "'val'", "'='", "'.'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "WS", "NEWLINE", 
      "Digit", "NAME", "INT", "FLOAT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  keywordgrammarParserStaticData = staticData.release();
}

}

KeywordGrammarParser::KeywordGrammarParser(TokenStream *input) : KeywordGrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

KeywordGrammarParser::KeywordGrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  KeywordGrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *keywordgrammarParserStaticData->atn, keywordgrammarParserStaticData->decisionToDFA, keywordgrammarParserStaticData->sharedContextCache, options);
}

KeywordGrammarParser::~KeywordGrammarParser() {
  delete _interpreter;
}

const atn::ATN& KeywordGrammarParser::getATN() const {
  return *keywordgrammarParserStaticData->atn;
}

std::string KeywordGrammarParser::getGrammarFileName() const {
  return "KeywordGrammar.g4";
}

const std::vector<std::string>& KeywordGrammarParser::getRuleNames() const {
  return keywordgrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& KeywordGrammarParser::getVocabulary() const {
  return keywordgrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView KeywordGrammarParser::getSerializedATN() const {
  return keywordgrammarParserStaticData->serializedATN;
}


//----------------- Start_Context ------------------------------------------------------------------

KeywordGrammarParser::Start_Context::Start_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::ChunkContext* KeywordGrammarParser::Start_Context::chunk() {
  return getRuleContext<KeywordGrammarParser::ChunkContext>(0);
}

tree::TerminalNode* KeywordGrammarParser::Start_Context::EOF() {
  return getToken(KeywordGrammarParser::EOF, 0);
}


size_t KeywordGrammarParser::Start_Context::getRuleIndex() const {
  return KeywordGrammarParser::RuleStart_;
}


std::any KeywordGrammarParser::Start_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitStart_(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::Start_Context* KeywordGrammarParser::start_() {
  Start_Context *_localctx = _tracker.createInstance<Start_Context>(_ctx, getState());
  enterRule(_localctx, 0, KeywordGrammarParser::RuleStart_);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    chunk();
    setState(43);
    match(KeywordGrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChunkContext ------------------------------------------------------------------

KeywordGrammarParser::ChunkContext::ChunkContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::BlockContext* KeywordGrammarParser::ChunkContext::block() {
  return getRuleContext<KeywordGrammarParser::BlockContext>(0);
}


size_t KeywordGrammarParser::ChunkContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleChunk;
}


std::any KeywordGrammarParser::ChunkContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitChunk(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::ChunkContext* KeywordGrammarParser::chunk() {
  ChunkContext *_localctx = _tracker.createInstance<ChunkContext>(_ctx, getState());
  enterRule(_localctx, 2, KeywordGrammarParser::RuleChunk);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

KeywordGrammarParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<KeywordGrammarParser::StatContext *> KeywordGrammarParser::BlockContext::stat() {
  return getRuleContexts<KeywordGrammarParser::StatContext>();
}

KeywordGrammarParser::StatContext* KeywordGrammarParser::BlockContext::stat(size_t i) {
  return getRuleContext<KeywordGrammarParser::StatContext>(i);
}


size_t KeywordGrammarParser::BlockContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleBlock;
}


std::any KeywordGrammarParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::BlockContext* KeywordGrammarParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, KeywordGrammarParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 82994) != 0)) {
      setState(47);
      stat();
      setState(52);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

KeywordGrammarParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* KeywordGrammarParser::StatContext::NEWLINE() {
  return getToken(KeywordGrammarParser::NEWLINE, 0);
}

KeywordGrammarParser::ObjectdefContext* KeywordGrammarParser::StatContext::objectdef() {
  return getRuleContext<KeywordGrammarParser::ObjectdefContext>(0);
}

KeywordGrammarParser::ObjmethoddefContext* KeywordGrammarParser::StatContext::objmethoddef() {
  return getRuleContext<KeywordGrammarParser::ObjmethoddefContext>(0);
}

KeywordGrammarParser::MethoddefContext* KeywordGrammarParser::StatContext::methoddef() {
  return getRuleContext<KeywordGrammarParser::MethoddefContext>(0);
}

KeywordGrammarParser::ValdefContext* KeywordGrammarParser::StatContext::valdef() {
  return getRuleContext<KeywordGrammarParser::ValdefContext>(0);
}

KeywordGrammarParser::ValassignmentContext* KeywordGrammarParser::StatContext::valassignment() {
  return getRuleContext<KeywordGrammarParser::ValassignmentContext>(0);
}

KeywordGrammarParser::MethodcallContext* KeywordGrammarParser::StatContext::methodcall() {
  return getRuleContext<KeywordGrammarParser::MethodcallContext>(0);
}

KeywordGrammarParser::ObjmethodcallContext* KeywordGrammarParser::StatContext::objmethodcall() {
  return getRuleContext<KeywordGrammarParser::ObjmethodcallContext>(0);
}


size_t KeywordGrammarParser::StatContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleStat;
}


std::any KeywordGrammarParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::StatContext* KeywordGrammarParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 6, KeywordGrammarParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(53);
      match(KeywordGrammarParser::NEWLINE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(54);
      match(KeywordGrammarParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(55);
      objectdef();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(56);
      objmethoddef();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(57);
      methoddef();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(58);
      valdef();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(59);
      valassignment();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(60);
      methodcall();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(61);
      objmethodcall();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringContext ------------------------------------------------------------------

KeywordGrammarParser::StringContext::StringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* KeywordGrammarParser::StringContext::NAME() {
  return getToken(KeywordGrammarParser::NAME, 0);
}


size_t KeywordGrammarParser::StringContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleString;
}


std::any KeywordGrammarParser::StringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitString(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::StringContext* KeywordGrammarParser::string() {
  StringContext *_localctx = _tracker.createInstance<StringContext>(_ctx, getState());
  enterRule(_localctx, 8, KeywordGrammarParser::RuleString);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(KeywordGrammarParser::T__1);
    setState(65);
    match(KeywordGrammarParser::NAME);
    setState(66);
    match(KeywordGrammarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

KeywordGrammarParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* KeywordGrammarParser::IdentifierContext::NAME() {
  return getToken(KeywordGrammarParser::NAME, 0);
}


size_t KeywordGrammarParser::IdentifierContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleIdentifier;
}


std::any KeywordGrammarParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::IdentifierContext* KeywordGrammarParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 10, KeywordGrammarParser::RuleIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(KeywordGrammarParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectIdentifierContext ------------------------------------------------------------------

KeywordGrammarParser::ObjectIdentifierContext::ObjectIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::IdentifierContext* KeywordGrammarParser::ObjectIdentifierContext::identifier() {
  return getRuleContext<KeywordGrammarParser::IdentifierContext>(0);
}


size_t KeywordGrammarParser::ObjectIdentifierContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleObjectIdentifier;
}


std::any KeywordGrammarParser::ObjectIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitObjectIdentifier(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::ObjectIdentifierContext* KeywordGrammarParser::objectIdentifier() {
  ObjectIdentifierContext *_localctx = _tracker.createInstance<ObjectIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 12, KeywordGrammarParser::RuleObjectIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodIdentifierContext ------------------------------------------------------------------

KeywordGrammarParser::MethodIdentifierContext::MethodIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::IdentifierContext* KeywordGrammarParser::MethodIdentifierContext::identifier() {
  return getRuleContext<KeywordGrammarParser::IdentifierContext>(0);
}


size_t KeywordGrammarParser::MethodIdentifierContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleMethodIdentifier;
}


std::any KeywordGrammarParser::MethodIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitMethodIdentifier(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::MethodIdentifierContext* KeywordGrammarParser::methodIdentifier() {
  MethodIdentifierContext *_localctx = _tracker.createInstance<MethodIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 14, KeywordGrammarParser::RuleMethodIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ValIdentifierContext ------------------------------------------------------------------

KeywordGrammarParser::ValIdentifierContext::ValIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::IdentifierContext* KeywordGrammarParser::ValIdentifierContext::identifier() {
  return getRuleContext<KeywordGrammarParser::IdentifierContext>(0);
}


size_t KeywordGrammarParser::ValIdentifierContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleValIdentifier;
}


std::any KeywordGrammarParser::ValIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitValIdentifier(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::ValIdentifierContext* KeywordGrammarParser::valIdentifier() {
  ValIdentifierContext *_localctx = _tracker.createInstance<ValIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 16, KeywordGrammarParser::RuleValIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdentifierContext ------------------------------------------------------------------

KeywordGrammarParser::TypeIdentifierContext::TypeIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::IdentifierContext* KeywordGrammarParser::TypeIdentifierContext::identifier() {
  return getRuleContext<KeywordGrammarParser::IdentifierContext>(0);
}


size_t KeywordGrammarParser::TypeIdentifierContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleTypeIdentifier;
}


std::any KeywordGrammarParser::TypeIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitTypeIdentifier(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::TypeIdentifierContext* KeywordGrammarParser::typeIdentifier() {
  TypeIdentifierContext *_localctx = _tracker.createInstance<TypeIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 18, KeywordGrammarParser::RuleTypeIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamenterContext ------------------------------------------------------------------

KeywordGrammarParser::ParamenterContext::ParamenterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::IdentifierContext* KeywordGrammarParser::ParamenterContext::identifier() {
  return getRuleContext<KeywordGrammarParser::IdentifierContext>(0);
}

KeywordGrammarParser::StringContext* KeywordGrammarParser::ParamenterContext::string() {
  return getRuleContext<KeywordGrammarParser::StringContext>(0);
}

tree::TerminalNode* KeywordGrammarParser::ParamenterContext::INT() {
  return getToken(KeywordGrammarParser::INT, 0);
}

tree::TerminalNode* KeywordGrammarParser::ParamenterContext::FLOAT() {
  return getToken(KeywordGrammarParser::FLOAT, 0);
}


size_t KeywordGrammarParser::ParamenterContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleParamenter;
}


std::any KeywordGrammarParser::ParamenterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitParamenter(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::ParamenterContext* KeywordGrammarParser::paramenter() {
  ParamenterContext *_localctx = _tracker.createInstance<ParamenterContext>(_ctx, getState());
  enterRule(_localctx, 20, KeywordGrammarParser::RuleParamenter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(82);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case KeywordGrammarParser::NAME: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        identifier();
        break;
      }

      case KeywordGrammarParser::T__1: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        string();
        break;
      }

      case KeywordGrammarParser::INT: {
        enterOuterAlt(_localctx, 3);
        setState(80);
        match(KeywordGrammarParser::INT);
        break;
      }

      case KeywordGrammarParser::FLOAT: {
        enterOuterAlt(_localctx, 4);
        setState(81);
        match(KeywordGrammarParser::FLOAT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamenterlistContext ------------------------------------------------------------------

KeywordGrammarParser::ParamenterlistContext::ParamenterlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<KeywordGrammarParser::ParamenterContext *> KeywordGrammarParser::ParamenterlistContext::paramenter() {
  return getRuleContexts<KeywordGrammarParser::ParamenterContext>();
}

KeywordGrammarParser::ParamenterContext* KeywordGrammarParser::ParamenterlistContext::paramenter(size_t i) {
  return getRuleContext<KeywordGrammarParser::ParamenterContext>(i);
}


size_t KeywordGrammarParser::ParamenterlistContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleParamenterlist;
}


std::any KeywordGrammarParser::ParamenterlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitParamenterlist(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::ParamenterlistContext* KeywordGrammarParser::paramenterlist() {
  ParamenterlistContext *_localctx = _tracker.createInstance<ParamenterlistContext>(_ctx, getState());
  enterRule(_localctx, 22, KeywordGrammarParser::RuleParamenterlist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 458756) != 0)) {
      setState(84);
      paramenter();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == KeywordGrammarParser::T__2) {
      setState(90);
      match(KeywordGrammarParser::T__2);
      setState(91);
      paramenter();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamenterDefContext ------------------------------------------------------------------

KeywordGrammarParser::ParamenterDefContext::ParamenterDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KeywordGrammarParser::TypeIdentifierContext* KeywordGrammarParser::ParamenterDefContext::typeIdentifier() {
  return getRuleContext<KeywordGrammarParser::TypeIdentifierContext>(0);
}

KeywordGrammarParser::ParamenterContext* KeywordGrammarParser::ParamenterDefContext::paramenter() {
  return getRuleContext<KeywordGrammarParser::ParamenterContext>(0);
}


size_t KeywordGrammarParser::ParamenterDefContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleParamenterDef;
}


std::any KeywordGrammarParser::ParamenterDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitParamenterDef(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::ParamenterDefContext* KeywordGrammarParser::paramenterDef() {
  ParamenterDefContext *_localctx = _tracker.createInstance<ParamenterDefContext>(_ctx, getState());
  enterRule(_localctx, 24, KeywordGrammarParser::RuleParamenterDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    typeIdentifier();
    setState(98);
    paramenter();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamenterDeflistContext ------------------------------------------------------------------

KeywordGrammarParser::ParamenterDeflistContext::ParamenterDeflistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<KeywordGrammarParser::ParamenterDefContext *> KeywordGrammarParser::ParamenterDeflistContext::paramenterDef() {
  return getRuleContexts<KeywordGrammarParser::ParamenterDefContext>();
}

KeywordGrammarParser::ParamenterDefContext* KeywordGrammarParser::ParamenterDeflistContext::paramenterDef(size_t i) {
  return getRuleContext<KeywordGrammarParser::ParamenterDefContext>(i);
}


size_t KeywordGrammarParser::ParamenterDeflistContext::getRuleIndex() const {
  return KeywordGrammarParser::RuleParamenterDeflist;
}


std::any KeywordGrammarParser::ParamenterDeflistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KeywordGrammarVisitor*>(visitor))
    return parserVisitor->visitParamenterDeflist(this);
  else
    return visitor->visitChildren(this);
}

KeywordGrammarParser::ParamenterDeflistContext* KeywordGrammarParser::paramenterDeflist() {
  ParamenterDeflistContext *_localctx = _tracker.createInstance<ParamenterDeflistContext>(_ctx, getState());
  enterRule(_localctx, 26, KeywordGrammarParser::RuleParamenterDeflist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == KeywordGrammarParser::NAME) {
      setState(100);
      paramenterDef();
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(110);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == KeywordGrammarParser::T__2) {
      setState(106);
      match(KeywordGrammarParser::T__2);
      setState(107);
      paramenterDef();
      setState(112);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectdefContext ------------------------------------------------------------------
